[package]
name = "target_runner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.11.0"
reqwest = { version =  "0.11.22" }
serde_json = "1.0.107"
tokio = { version = "1.33.0", features = ["rt", "macros"] }
